# plant_growth-analysis

./: .gitignore  README.md  main.py  model.pkl  pyproject.toml  requirements.txt  yolo.py
